src/objects/BMCServiceDesk__Change_Manifest__c.object
<CustomObject>
    <description>Stores data that is used to track progress of a change request for various status values.</description>
    <fields>
        <fullName>BMCServiceDesk__FKChange_Request__c</fullName>
        <label>Change Request</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Change Manifests</relationshipLabel>
        <relationshipName>Change_Manifests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKFuture_Tasks__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>Change Manifests</relationshipLabel>
        <relationshipName>Change_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <referenceTo>BMCServiceDesk__Status__c</referenceTo>
        <relationshipLabel>Change Manifests</relationshipLabel>
        <relationshipName>Change_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>BMCServiceDesk__Task__c</referenceTo>
        <relationshipLabel>Change Manifests</relationshipLabel>
        <relationshipName>Change_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTemplate_Linking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKTemplate Linking</label>
        <referenceTo>BMCServiceDesk__SYSTemplateLink__c</referenceTo>
        <relationshipLabel>Change Manifests</relationshipLabel>
        <relationshipName>Change_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Template_Order__c</fullName>
        <formula>BMCServiceDesk__FKTemplate_Linking__r.BMCServiceDesk__orderNumber__c</formula>
        <label>Template Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Change Manifest</label>
    <nameField>
        <displayFormat>MAN-{0}</displayFormat>
        <label>Manifest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Manifests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>